[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/ESC_quit.gd" type="Script" id=1]
[ext_resource path="res://scripts/Test_Editor.gd" type="Script" id=2]
[ext_resource path="res://prefabs/FPSCamera.tscn" type="PackedScene" id=3]

[node name="Test_SceneEditor" type="Spatial"]
script = ExtResource( 1 )

[node name="script" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 250.0
margin_bottom = 410.0
color = Color( 0.231373, 0.231373, 0.231373, 0.345098 )

[node name="Label" type="Label" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 240.0
margin_bottom = 270.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Hiiren vasen laittaa obun skeneen.
Hiiren oikea poistaa obun.
Hiiren rulla säätää korkeutta.

+ / -  vaihtaa objektia.

TAB vaihtaa editmoodin:
mode 1: pointteri keskellä ruutua
mode 2: hiirenpointteri näkyviin
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="selectedLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 310.0
margin_right = 240.0
margin_bottom = 324.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "selected"

[node name="scaleLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 330.0
margin_right = 240.0
margin_bottom = 344.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "scale"

[node name="rotLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 350.0
margin_right = 240.0
margin_bottom = 364.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "rot"

[node name="spawnLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 291.0
margin_right = 240.0
margin_bottom = 305.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "spawn mode"

[node name="saveLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 390.0
margin_right = 240.0
margin_bottom = 404.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "[F5] Save map.txt"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPSCamera" parent="." instance=ExtResource( 3 )]
